绘制彩色的等腰三角形

--- a/app/src/main/res/layout/activity_open_gl2.xml
+++ b/app/src/main/res/layout/activity_open_gl2.xml
@@ -4,20 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".activity.OpenGlActivity2">
 
-    <Button
-        android:id="@+id/first1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="1 activity"
-        android:textSize="12dp" />
 
-    <Button
-        android:id="@+id/first2"
+    <com.example.huangdaju.androidopengl.widget.Monitor
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="2 activity"
-        android:textSize="12dp"/>
+        android:layout_height="match_parent" />
 
 </android.support.constraint.ConstraintLayout>
