--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <Button
@@ -20,4 +21,11 @@
         android:text="2 activity"
         android:textSize="12dp"/>
 
-</android.support.constraint.ConstraintLayout>
+    <Button
+        android:id="@+id/first3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="3 activity"
+        android:textSize="12dp"/>
+
+</LinearLayout>
