--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,4 +28,10 @@
         android:text="3 activity"
         android:textSize="12dp"/>
 
+    <Button
+        android:id="@+id/first4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="4 activity"
+        android:textSize="12dp"/>
 </LinearLayout>
